# mixle

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LEDGER.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  api_manifest.json  constraints-min.txt  maturity_manifest.json  module_ownership.json  pyproject.toml  serialization_schema_manifest.json  setup.cfg  setup.py
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pip-audit-ignore.txt
.github/workflows/: docs.yml  extras-matrix.yml  post-publish-verify.yml  publish.yml  security.yml  tests.yml
audit/: COMPUTATION_AUDIT.md  CONSISTENCY_AUDIT.md  _SPEC.md
audit/sections/: 01-core-numerics.md  02-symbolic-torch-engines.md  03-compute-core.md  04-compute-fused-gradient.md  05-leaf-count.md  06-leaf-categorical.md  07-leaf-continuous-a.md  08-leaf-continuous-b.md  09-leaf-directional-process.md  10-multivariate.md  11-latent.md  12-combinator.md  13-bayes-graph-sets.md  13a-graph.md  13b-sets.md  14-estimation-fisher.md  15-doe-uq-infer.md
benchmarks/: README.md  _bench.py  gpu_scaling.py  inference_speed.py  mixle_benchmarks.html  run_benchmarks.py  typed_optimization.py
benchmarks/distributed_stress/: README.md  dist_stress.py  dtensor_cpu.py  dtensor_torchrun.py
benchmarks/results/: gpu_results.json  results.json  typed_optimization.json
benchmarks/scaling_profile/: scaling_profile.py
deploy/: Dockerfile  README.md  app.py  requirements.txt
deploy/k8s/: deployment.yaml  drift-retrain-cronjob.yaml  seed-job.yaml
docs/: ABSTRACTIONS.md  ARCHITECTURE.md  CAPABILITIES.md  Makefile  agentic-task-distillation.rst  analysis.rst  api-overview.rst  architecture.md  automatic-inference.rst  automatic-modeling-contract.rst  automatic-modeling-internals.rst  backend-support.rst  benchmark-methodology.rst  bring_your_own_model.rst  capabilities-contracts.rst  capability-lifecycle.rst  changelog.rst  charter.md  claim-evidence-ledger.rst  compute-layer.rst  concepts.rst  conf.py  contracts.md  cookbook.rst  data.rst  design-notes.rst  development.md  development.rst  distributions.rst  doe.rst  engines.rst  enumeration.rst  evolution.rst  example-execution-manifest.rst  examples.rst  examples_gallery.rst  experimental-program.rst  extending.rst  family-release.rst  frontier-integration-note.rst  (+55 more)
docs/_root_templates/: index.html  switcher.json
docs/_static/: mixle-docs.css
docs/api/: mixle.analysis.covariance_shrinkage.rst  mixle.analysis.coverage.rst  mixle.analysis.extreme.rst  mixle.analysis.kde.rst  mixle.analysis.kriging.rst  mixle.analysis.max_stable.rst  mixle.analysis.rank_aggregation.rst  mixle.analysis.rst  mixle.analysis.spatial_mixture.rst  mixle.capability.rst  mixle.contracts.rst  mixle.data.core.rst  mixle.data.encoded_io.rst  mixle.data.exchangeability.rst  mixle.data.hashing.rst  mixle.data.partition.rst  mixle.data.rst  mixle.data.schema.rst  mixle.data.sources.array_source.rst  mixle.data.sources.arrow_source.rst  mixle.data.sources.graph_source.rst  mixle.data.sources.hadoop_source.rst  mixle.data.sources.mongo_source.rst  mixle.data.sources.pandas_source.rst  mixle.data.sources.rst  mixle.data.sources.spark_source.rst  mixle.data.sources.sql_source.rst  mixle.data.sources.text_source.rst  mixle.data.stream_token_source.rst  mixle.data.streaming_corpus.rst  mixle.data.structure.rst  mixle.data.validate.rst  mixle.dist.rst  mixle.doe._contracts.rst  mixle.doe.active.rst  mixle.doe.amplify.rst  mixle.doe.analysis.rst  mixle.doe.batch.rst  mixle.doe.bayesopt.rst  mixle.doe.calibrate.rst  (+652 more)
docs/interfaces/: _SPEC.md
docs/migrations/: 0.8.0.md  (+1 more)
examples/: auto_example.py  calibrated_report_demo.py  cross_modal_fit_receipt.py  doe_example.py  engine_benchmark_example.py  enumeration_example.py  enumeration_showcase_example.py  extensibility_seams_example.py  flagship_heterogeneous_adult.py  flagship_kg_agent.py  flagship_physics_inverse.py  flagship_temporal_sunspots.py  flagship_triage_app.py  foundation_to_edge.py  frontier_ecosystem_demo.py  frontier_family_showcase.py  gallery_combinators_example.py  gallery_directional_example.py  gallery_graphs_example.py  gallery_multivariate_example.py  gallery_processes_example.py  gallery_rankings_example.py  gallery_structured_example.py  gallery_univariate_example.py  geoscience_inversion_report.py  heterogeneous_correctness_example.py  heterogeneous_representation_example.py  hidden_association_example.py  hierarchical_mixture_example.py  hybrid_llm_example.py  joint_mixture_example.py  label_economics_demo.py  laptop_scientist.py  latent_variable_models_example.py  lookback_hmm_example.py  mixture_reduction_benchmark.py  multimodal_stage1_demo.py  peft_lora_grad_leaf.py  ppl_example.py  production_example.py  (+16 more)
manifests/: README.md
mixle/: __init__.py  blending.py  capability.py  capability_lifecycle.py  causal.py  contracts.py  dist.py  distribution.py  fault.py  lifecycle.py  maturity.py  meta.py  mine_planning.py  ops.py  pipeline_twin.py  process.py  program.py  registry.py  relations.py  scientist.py  scorecard.py  semantics.py  spend.py  stochastic_opt.py  system.py
notes/: a3-quotient-negative.md  c7-probing-policy-negative.md  distribution_api_naming_accounting.md
pysp/: __init__.py  arithmetic.py  capability.py  contracts.py  dist.py  enumeration.py  graph.py  inference.py  ops.py  optimize.py  parallel.py  planner.py  process.py  relations.py  sampling.py
release-checklists/: 0.6.3.md  0.7.0-freeze-all.txt  0.7.0.md  0.8.0-base.md  0.8.0-decisions.md  0.8.0-external-use-case-template.md  0.8.0-gpu-claims.md  0.8.0-ownership.md  0.8.0-performance-change-policy.md  0.8.0-preflight.md  0.8.0-rc-stages.md  0.8.0-repro-bundle.json  0.8.0-risks.md  0.8.0-statistical-review.md  0.8.0-systems-review.md  0.8.0-tester-report-template.md  0.8.0.md  README.md  lessons-learned.md
scripts/: benchmark_provenance.py  build_repro_bundle.py  fuzz_fused_soak.py  gen_api_manifest.py  gen_maturity_manifest.py  gen_schema_manifest.py  import_sweep.py  release_metadata.py  reproduce.py  scan_duplicate_bodies.py
(+2974 files in other folders)
