[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# PyPI distribution name; the import package is `mixle` (cf. scikit-learn -> sklearn).
name = "mixle"
version = "0.7.0"
description = "A package for estimating heterogeneous probability density functions."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Grant Boquet", email = "grant.boquet@gmail.com" }]
keywords = [
    "machine learning",
    "density estimation",
    "statistics",
    "heterogeneous data",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    # CI (.github/workflows/tests.yml) runs Linux x86_64 only. macOS (incl. arm64) is the primary dev
    # platform and works in practice (the suite is run there routinely, ad hoc, not gated in CI) but
    # is not a tested release guarantee; Windows is untested and unclaimed.
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
# Base install covers all distributions and local (numpy) estimation; acceleration,
# distribution, and embedding back-ends are opt-in extras (see [project.optional-dependencies]).
# Lower bounds reflect the oldest releases that carry every API mixle calls and that are routinely
# tested (numpy >=1.26 for the stable ndarray/linalg/errstate surface; scipy >=1.10 for
# special.logsumexp + stats.binomtest/kstwo used by the inference layer; mpmath >=1.3). They are
# floors, not pins -- newer majors are allowed.
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "mpmath>=1.3",
]

[project.optional-dependencies]
# Extras are opt-in; the lower bounds are conservative floors (oldest releases with Python 3.10-3.12
# wheels and the APIs mixle uses), not pins -- newer majors are allowed. numba >= 0.59 is the first
# series with 3.10-3.12 wheels and the njit features the kernels use. tbb is numba's optional
# parallel=True threading backend (several kernels use parallel=True); numba falls back to its own
# built-in "workqueue" threading layer without it, so it's a performance extra, not a hard requirement
# -- and it must stay platform-gated: Intel TBB ships no arm64 (Apple Silicon) wheels, so an
# unconditional floor here makes `pip install mixle[numba]` uninstallable on that platform.
numba = ["numba>=0.59", "tbb>=2021.6; platform_machine == 'x86_64'"]
# pandas is only used by the DataFrame data adapter (which duck-types and never imports pandas);
# it is optional so the base install stays lean.
pandas = ["pandas>=2.0"]
# data-layer connectors (mixle.data.sources) -- each lazy + optional.
arrow = ["pyarrow>=14"]
sql = ["sqlalchemy>=2.0"]
mongo = ["pymongo>=4.3"]
hadoop = ["pyarrow>=14", "fsspec>=2023.1.0"]
# lazy N-D array-store connectors (mixle.data.sources.array_source): zarr + HDF5 volumes for
# PatchSampler-style streaming reads. numpy-memmap needs no extra dependency, so it is not listed here.
arrays = ["zarr>=2.16", "h5py>=3.10"]
data = ["pandas>=2.0", "pyarrow>=14", "sqlalchemy>=2.0", "pymongo>=4.3", "fsspec>=2023.1.0"]
# graph-grammar models (mixle.stats.sequences.grammar) are the only networkx user; lazy + optional.
grammar = ["networkx>=3.0"]
# GMP-backed (FFT) big-integer multiply for the structural count-DP's large histogram convolutions.
gmpy2 = ["gmpy2>=2.1"]
spark = ["pyspark>=3.4"]
dask = ["dask>=2023.5.0", "distributed>=2023.5.0"]
# mixle.utils.parallel.ray_data's "ray" encoded-data backend (map/fold sufficient statistics over a
# Ray cluster, same contract as the spark/dask backends); only ray.remote/ray.put/ray.get/ray.init are
# used, all stable since early 2.x.
ray = ["ray>=2.9"]
# mixle.utils.parallel.lightning_data's "lightning" encoded-data backend (mini-batch iteration via a
# lightning.pytorch.LightningDataModule + DataLoader, driving stochastic/mini-batch EM).
lightning = ["lightning>=2.1"]
# safetensors is the companion of torch here: torch TaskModel artifacts persist their weights through
# safetensors.torch.save_model (see mixle/task/artifact.py), so a torch install needs it to save/load.
torch = ["torch>=2.0", "safetensors>=0.4"]
# the assembled laptop scientist (mixle.scientist): real open-weight encoders + a local LLM as typed
# leaves. Weights load from the local HF cache; nothing is downloaded at import.
scientist = ["torch>=2.0", "safetensors>=0.4", "transformers>=4.40", "sentence-transformers>=3.0", "datasets>=2.14"]
# Documentation build (Sphinx site): the Furo theme + MyST markdown; autodoc mocks the heavy back-ends.
# sphinx-polyversion drives the multi-version build (docs/poly.py) -- a plain `sphinx-build` doesn't
# need it, only `sphinx-polyversion docs/poly.py` (what the Docs CI workflow runs) does.
docs = ["sphinx>=7", "furo", "myst-parser>=2", "sphinx-polyversion>=2.0"]
# JaxEngine (XLA arrays, functional autograd) + the NumPyro NUTS sampler backend (how="nuts", backend="jax").
jax = ["jax>=0.4", "numpyro>=0.13"]
mpi = ["mpi4py>=3.1"]
umap = ["umap-learn>=0.5.4"]
sympy = ["sympy>=1.12"]
# to_sage symbolic export. Full SageMath is not pip-installable; passagemath is its modular,
# wheel-distributed fork (the symbolic subset suffices -- it provides sage.all__sagemath_symbolics).
sage = ["passagemath-symbolics>=10.4"]
test = ["pytest>=8", "pytest-xdist>=3.0", "pytest-cov>=5.0"]
# ruff is pinned: a newer release could add rules and break the blocking lint check unexpectedly.
lint = ["ruff==0.15.21", "mypy>=1.0"]
all = ["numba>=0.59", "tbb>=2021.6; platform_machine == 'x86_64'", "pyspark>=3.4", "dask>=2023.5.0", "distributed>=2023.5.0", "torch>=2.0", "safetensors>=0.4", "mpi4py>=3.1", "umap-learn>=0.5.4", "pandas>=2.0", "pyarrow>=14", "sqlalchemy>=2.0", "networkx>=3.0", "ray>=2.9", "lightning>=2.1"]

[project.urls]
Homepage = "https://github.com/gmboquet/mixle"
Repository = "https://github.com/gmboquet/mixle"

[tool.setuptools.packages.find]
include = ["mixle*"]

[tool.pytest.ini_options]
testpaths = ["mixle/tests"]
python_files = ["*_test.py"]
python_classes = ["*Test", "*TestCase"]
python_functions = ["test_*"]
# Fast + parallel by default: plain `pytest` runs the `fast` gate under `-n auto` in ~25 s (vs ~2.5 min
# for the whole suite). The heavy integration / PDE-inversion / stochastic-recovery tests are tagged
# `slow` in conftest and excluded here; they still run in CI's full gate. A later `-m` on the command
# line overrides this default, so the CI gates keep working:
#   full correctness run : pytest -m "not optional and not benchmark"   (everything incl. slow)
#   single file, serial  : pytest path/to/file_test.py -n0 -m ""        (-m "" clears the fast filter)
addopts = "-ra --strict-markers -n auto -m fast"
markers = [
    "fast: quick correctness tests suitable for every commit.",
    "slow: heavier stochastic, integration, or exhaustive tests for full CI.",
    "optional: tests that require optional extras or external executables.",
    "benchmark: timing-oriented tests; not part of correctness gates.",
    "experimental: tests for mixle.experimental mechanisms without graduation receipts yet (see mixle/experimental/README.md).",
    "stochastic: tests whose assertions depend on random sampling.",
    "integration: end-to-end workflow tests across multiple modules.",
    "distribution: distribution interface, density, sampler, estimator, and encoder tests.",
    "bayes: Bayesian (conjugate/variational) distribution and fit/streaming tests.",
    "automatic: automatic model detection/profiling tests.",
    "ppl: probabilistic-programming dialect (free/joint/fit) tests.",
    "doe: design-of-experiments, Bayesian-optimization, and sensitivity-analysis tests.",
    "enumeration: support enumeration and quantized-index tests.",
    "fisher: Fisher information/view tests.",
    "hvis: model-based embedding (t-SNE / UMAP / ...) affinity and embedding tests.",
    "graph: random graph and graph-structured model tests.",
    "knowledge_graph: knowledge graph model tests.",
    "pomdp: partially observable Markov decision process tests.",
    "causal: conditional dependence and causal structure learning tests.",
    "grammar: grammar learning and PCFG tests.",
    "kernel: fused kernel/compiled path tests.",
    "em: expectation-maximization strategy tests.",
    "torch: torch engine tests.",
    "jax: JAX engine / NumPyro backend tests.",
    "numba: numba-accelerated path tests.",
    "mpi: MPI backend tests.",
    "dask: dask.distributed backend tests.",
    "ray: Ray backend tests.",
    "spark: Spark backend tests.",
    "torchrun: torch.distributed/torchrun backend tests.",
    "parallel: multiprocessing or distributed backend tests.",
    "planner: resource and placement planning tests.",
    "serialization: JSON serialization tests.",
    "hmm: HMM, segmental HMM, tree HMM, and lookback HMM tests.",
    "pcfg: grammar and PCFG tests.",
    "latent: mixture, DPM, LDA, LLDA, and hidden-association tests.",
]

[tool.coverage.run]
source = ["mixle"]
omit = ["mixle/tests/*"]
# branch coverage catches an untested if/else arm that line coverage alone would miss.
branch = true

[tool.coverage.report]
# Lines that are structurally unreachable in a coverage run (defensive asserts, TYPE_CHECKING blocks,
# abstract-method bodies) are excluded rather than counted against the threshold.
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "^\\s*\\.\\.\\.\\s*$",
]
skip_covered = false
show_missing = true

[tool.ruff]
line-length = 120
target-version = "py310"
# Demo scripts under examples/ are illustrative and not held to library lint rules.
extend-exclude = ["examples"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "F403", # `from mixle.engines.arithmetic import *` is an intentional dispatch namespace
    "F405", #   (mixle.engines.arithmetic defines __all__); the star is deliberate, not accidental.
    "E501", # line length is governed by the formatter, not flagged by the linter.
    "B008", # immutable sentinel instances as defaults (e.g. NullDistribution()) are intentional.
    # The rules below are deliberately not enforced over this scientific codebase; they are
    # either stylistic or risky to retrofit in bulk. Revisit case-by-case rather than globally.
    "UP031", # printf-style `%` formatting is valid and pervasive; mechanical f-string rewrites risk behavior changes.
    "B905",  # `zip(..., strict=...)` retrofit changes runtime behavior (raises on length mismatch).
    "B904",  # explicit `raise ... from` exception chaining; cosmetic here.
    "B007",  # unused loop control variables are often intentional in numeric loops.
    "E741",  # single-letter names (l, I, O) are idiomatic for indices/matrices in the math code.
    "E731",  # lambda assignment is used deliberately for small local closures.
    "E402",  # several modules do deliberate late/conditional (optional-backend) imports.
    "F841",  # unused locals are frequently intermediate scientific results kept for clarity.
]

[tool.mypy]
python_version = "3.10"
files = ["mixle"]
# Strictness is intentionally relaxed for a large, partially-typed scientific codebase;
# tighten incrementally (e.g. per-module overrides) as annotations are completed.
ignore_missing_imports = true
warn_redundant_casts = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "mixle.tests.*"
ignore_errors = true
