[metadata]
description-file = README.md

[tool:pytest]
testpaths = pysp/tests
python_files = *_test.py
python_classes = *Test *TestCase
python_functions = test_*
addopts = -ra --strict-markers
markers =
    fast: quick correctness tests suitable for every commit.
    slow: heavier stochastic, integration, or exhaustive tests for full CI.
    optional: tests that require optional extras or external executables.
    benchmark: timing-oriented tests; not part of correctness gates.
    stochastic: tests whose assertions depend on random sampling.
    integration: end-to-end workflow tests across multiple modules.
    distribution: distribution interface, density, sampler, estimator, and encoder tests.
    bstats: Bayesian stats distribution and optimizer tests.
    automatic: automatic model detection/profiling tests.
    enumeration: support enumeration and quantized-index tests.
    fisher: Fisher information/view tests.
    htsne: HTSNE affinity and embedding tests.
    graph: random graph and graph-structured model tests.
    knowledge_graph: knowledge graph model tests.
    pomdp: partially observable Markov decision process tests.
    causal: conditional dependence and causal structure learning tests.
    grammar: grammar learning and PCFG tests.
    kernel: fused kernel/compiled path tests.
    em: expectation-maximization strategy tests.
    torch: torch engine tests.
    numba: numba-accelerated path tests.
    mpi: MPI backend tests.
    dask: dask.distributed backend tests.
    spark: Spark backend tests.
    torchrun: torch.distributed/torchrun backend tests.
    parallel: multiprocessing or distributed backend tests.
    planner: resource and placement planning tests.
    serialization: JSON serialization tests.
    hmm: HMM, segmental HMM, tree HMM, and lookback HMM tests.
    pcfg: grammar and PCFG tests.
    latent: mixture, DPM, LDA, LLDA, and hidden-association tests.
